Add @Serial annotation and refactor equals and hashCode
Added @Serial annotation for classes implementing Serializable to comply with Java serialization standards. Refactored equals and hashCode methods using Objects utility for better readability and performance. Also replaced explicit null checks and `sameValueAs` methods with concise alternatives.